8220162: Shenandoah should not commit HugeTLBFS memory

Reviewed-by: rkennke, zgu